Resetup and framework layout

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,5 +6,5 @@ commands:
   ob:
     description: OathBreaker a player
     usage: |
-            /ob <player>
+            /ob <player> <severity>
     
