Why is it broken again????

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -14,4 +14,8 @@ commands:
     description: finish your OB
     usage: |
             /done
+  getinfo:
+    description: Get info on a player
+    usage: |
+            /getinfo
     
