--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,7 +9,7 @@ commands:
   punish:
     description: OathBreaker a player
     usage: |
-            /punish <player> <severity>
+            /punish <ob|ban> <player> <severity>
   done:
     description: finish your OB
     usage: |
@@ -18,4 +18,8 @@ commands:
     description: Get info on a player
     usage: |
             /getinfo
+  pardon:
+    description: pardon a player from their sins
+    usage: |
+            /pardon <player>
     
